# AutomationCoordinationIndex

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE-DATA  Makefile  README.md  _config.yml  pyproject.toml
docs/: v.0.1_scope.md
docs/metrics/: machinery_gfcf.md
