[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aci"
version = "0.1.0"
description = "Automation Coordination Index pipeline"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
